--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,10 +45,9 @@ header p{
 
 
 
-.SNS img{
-  background-color:rgb(0, 0, 0, 0.3);
-  width:120px;
-  padding: 10px 60px;
+.SNS {
+  padding-top: 30px;
+  padding-bottom:30px;
 }
 
 .youtube{
